<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.momobites.www.inventory.Editor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Overview category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Overview Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_overview" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_inventory_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_inventory_name"
                        android:inputType="textCapWords" />

                    <!-- Price field -->
                    <LinearLayout
                        style="@style/EditorFieldStyle"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/edit_inventory_unit"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:hint="@string/unit_inventory_price" />

                        <EditText
                            android:id="@+id/edit_inventory_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/hint_inventory_price"
                            android:inputType="number" />


                    </LinearLayout>

                    <!-- Quantity field -->
                    <EditText
                        android:id="@+id/edit_inventory_quantity"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_inventory_quantity"
                        android:inputType="number" />

                    <!-- Supplier field -->
                    <EditText
                        android:id="@+id/edit_inventory_supplier"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_inventory_supplier"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/required_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/required_field" />
                </LinearLayout>

            </LinearLayout>

            <!-- Sales category -->
            <LinearLayout
                android:id="@+id/container_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/editor_sold_textview_menu"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/editor_sale_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/editor_sold_textview" />

                <!--Sale Button-->
                <Button
                    android:id="@+id/sell_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_sell_btn" />

                <!--Order Button-->
                <Button
                    android:id="@+id/order_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="orderItemEditor"
                    android:text="@string/category_order_btn" />

            </LinearLayout>

            <!-- Image Placement -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/pictureBackground"
                android:minHeight="200dp"
                android:minWidth="200dp" />

            <!-- Image Buttons category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/editor_layout_picture"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12sp">

                <!--Take Photo-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:id="@+id/takepictureButton"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_camera_btn_msg" />

                    <Button
                        android:id="@+id/camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="takePicture"
                        android:text="@string/category_camera_button" />

                </LinearLayout>

                <!--Import From Gallery-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_gallery_btn_msg" />

                    <Button
                        android:id="@+id/gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="openImageSelector"
                        android:text="@string/category_gallery_button" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
