<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ListItemStyleInfo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/name"
            android:layout_weight="5"
            style="@style/ListItemStyleSmall"
            android:layout_width="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/ListItemStyleInfo"
                android:text="@string/product_price" />

            <TextView
                style="@style/ListItemStyleInfo"
                android:text="@string/product_quantity" />

            <TextView
                style="@style/ListItemStyleInfo"
                android:text="@string/product_sold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/ListItemStyleSmall"
                    android:text="@string/product_usd_sign"
                    android:textColor="@android:color/black"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/price"
                    style="@style/ListItemStyleSmall" />

            </LinearLayout>


            <TextView
                android:id="@+id/quantity"
                style="@style/ListItemStyleSmall" />

            <TextView
                android:id="@+id/sell_number"
                style="@style/ListItemStyleSmall" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/list_sale_button"
                android:layout_width="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/product_sell_button" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>